# m-gru

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: quickstart_classic_gru.py  quickstart_mgru.py
src/m_gru.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/memento_gru.egg-info/: PKG-INFO  SOURCES.txt
src/mgru/: __init__.py  api.py  cli.py
src/mgru/data/: synthetic.py
src/mgru/gates/: adaptive_gain.py
src/mgru/models/: gru_baseline.py  mgru.py  mgru_cell.py
src/mgru/predictors/: smith.py  tiny_mlp.py
src/mgru/trainers/: supervised_trainer.py
src/mgru/utils/: metrics.py  seed.py  viz.py
tests/: test_cli.py  test_shapes.py  test_train_loop.py
